updated maven form multi-release jar and add tslv1.2 if not enabled on java7